--- a/package.json
+++ b/package.json
@@ -1,9 +1,18 @@
 {
+  "homepage": "https://sanghaibiraj.github.io/Instantpay/",
+  "name": "instantpay",
+  "private": true,
   "scripts": {
-    "start": "vite"
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist",
+    "dev": "vite",
+    "build": "vite build",
+    "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
+    "preview": "vite preview"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.17",
+    "gh-pages": "^6.1.1",
     "postcss": "^8.4.35",
     "tailwindcss": "^3.4.1",
     "vite": "^5.1.3"
